force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/UserCompany__c.field-meta.xml
<CustomField>
    <fullName>UserCompany__c</fullName>
    <label>Società Utenza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>