force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Validation__c.field-meta.xml
<CustomField>
    <fullName>Validation__c</fullName>
    <label>Validata</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>