force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/VATNumber__c.field-meta.xml
<CustomField>
    <fullName>VATNumber__c</fullName>
    <description>Partita IVA del cliente inviata da Sigma al CRM.</description>
    <label>Partita IVA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>