force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/WaitingTime__c.field-meta.xml
<CustomField>
    <fullName>WaitingTime__c</fullName>
    <description>Tempo trascorso in attesa dal cliente</description>
    <label>Tempo di Attesa</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>