force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/WorkGroup__c.field-meta.xml
<CustomField>
    <fullName>WorkGroup__c</fullName>
    <label>Gruppo di Lavoro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>