force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/WorkingStatus__c.field-meta.xml
<CustomField>
    <fullName>WorkingStatus__c</fullName>
    <formula>IF(AND(ManuallyReassigned__c=false,Queued__c=false,wrts_prcgvr__IsClosed__c=false),
				&apos;Attività creata ma non ancora assegnata a coda (da elaborare dal motore di assegnazione)&apos;,
				IF(AND(Queued__c=true,ManuallyReassigned__c=false, LEFT(OwnerId,3)=&apos;00G&apos;,wrts_prcgvr__IsClosed__c=false),
							&apos;Attività assegnata a coda (elaborata dal motore) ma non ancora assegnata ad Utente&apos;,
							IF(AND(ManuallyReassigned__c=true,LEFT(OwnerId,3)=&apos;00G&apos;,wrts_prcgvr__IsClosed__c=false),
										&apos;Attività assegnata a coda (manualmente) ma non ancora assegnata ad Utente&apos;,
										IF(AND(OR(ManuallyReassigned__c=true,Queued__c=true),LEFT(OwnerId,3)=&apos;005&apos;),
													&apos;Attività assegnata ad Utente, e quindi in fase di gestione o chiusa&apos;,
													IF(AND(ManuallyReassigned__c=false,Queued__c=false,wrts_prcgvr__IsClosed__c=true),
																&apos;Attività che non verranno mai assegnate manualmente e che vengono chiuse automaticamente&apos;,
																IF(AND(OR(ManuallyReassigned__c=true,Queued__c=true),LEFT(OwnerId,3)=&apos;00G&apos;,wrts_prcgvr__IsClosed__c=true),
																		&apos;Attività assegnata a coda e chiusa automaticamente&apos;,
																		&apos;&apos;))))))</formula>
    <inlineHelpText>Campo utilizzato nella reportistica</inlineHelpText>
    <label>Stato di lavorazione</label>
    <type>Text</type>
</CustomField>