force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/wrts_prcgvr__ActivityTemplate__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr__ActivityTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Activity Template used to create activity</description>
    <inlineHelpText>Activity Template used to create activity</inlineHelpText>
    <label>Activity Template</label>
    <referenceTo>wrts_prcgvr__ActivityTemplate__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>