force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/wrts_prcgvr__Description__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr__Description__c</fullName>
    <description>Description</description>
    <inlineHelpText>Description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>