force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/wrts_prcgvr__IsClosed__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr__IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>