force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/wrts_prcgvr__IsRequired__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr__IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mean that this activity need to be completed before a change phase of the master object</description>
    <inlineHelpText>Mean that this activity need to be completed before a change phase of the master object</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>