force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/wrts_prcgvr__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr__ObjectId__c</fullName>
    <description>Technical Field. Id of the related SObject</description>
    <inlineHelpText>Technical Field. Id of the related SObject</inlineHelpText>
    <label>Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>