force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/wrts_prcgvr__Phase__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr__Phase__c</fullName>
    <description>Destination phase of master object in which the Activity was created</description>
    <inlineHelpText>Destination phase of master object in which the Activity was created</inlineHelpText>
    <label>Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>