force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/wrts_prcgvr__Priority__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr__Priority__c</fullName>
    <description>The priority of the Activity.</description>
    <inlineHelpText>The priority of the Activity.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Alta</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Media</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - Bassa</label>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>