force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/wrts_prcgvr__Status__c.field-meta.xml
<CustomField>
    <fullName>wrts_prcgvr__Status__c</fullName>
    <description>Status</description>
    <inlineHelpText>Status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aperta</fullName>
                <default>true</default>
                <label>Aperta</label>
            </value>
            <value>
                <fullName>Sospesa</fullName>
            </value>
            <value>
                <fullName>Chiusa</fullName>
            </value>
            <value>
                <fullName>Creata</fullName>
            </value>
            <value>
                <fullName>Presa appuntamento in corso</fullName>
            </value>
            <value>
                <fullName>Appuntamento confermato</fullName>
            </value>
            <value>
                <fullName>Appuntamento non eseguito</fullName>
            </value>
            <value>
                <fullName>Appuntamento eseguito</fullName>
            </value>
            <value>
                <fullName>Annullata</fullName>
            </value>
            <value>
                <fullName>Invio app.to SELF cliente</fullName>
            </value>
            <value>
                <fullName>Appuntamento di competenza Distributore</fullName>
            </value>
            <value>
                <fullName>Scartata</fullName>
            </value>
            <value>
                <fullName>Modifica confermata</fullName>
            </value>
            <value>
                <fullName>Modifica appuntamento in corso</fullName>
            </value>
            <value>
                <fullName>Esitata</fullName>
            </value>
            <value>
                <fullName>Non Esitata</fullName>
            </value>
            <value>
                <fullName>Comunicazione inviata</fullName>
            </value>
            <value>
                <fullName>Comunicazione inviata</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completata</fullName>
            </value>
            <value>
                <fullName>KO Forzato</fullName>
            </value>
            <value>
                <fullName>KO Risolto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>