force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_AttivitaGestionali.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_AttivitaGestionali</fullName>
    <active>true</active>
    <description>Record type per gli le activiti Gestionali</description>
    <label>AttivitàGestionali</label>
</RecordType>