force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_Call.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Call</fullName>
    <active>true</active>
    <description>RT per le Chiamate CTI</description>
    <label>Chiamata</label>
</RecordType>