force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_chiamataoutbound.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_chiamataoutbound</fullName>
    <active>true</active>
    <description>RT dedicato alla activity di tracciatura chiamata outbound</description>
    <label>Chiamata Outbound</label>
</RecordType>