force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_ComfortQualityCall.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_ComfortQualityCall</fullName>
    <active>true</active>
    <label>Comfort e Quality Call</label>
</RecordType>