force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_CommunicationReject.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_CommunicationReject</fullName>
    <active>true</active>
    <description>Record Type per activity Comunicazione Rifiutata dei processi</description>
    <label>Comunicazione Rifiutata</label>
</RecordType>