force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_CreditCheckKO.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_CreditCheckKO</fullName>
    <active>true</active>
    <description>Record type per le activity di KO Credit Check sul Nuovo Cliente</description>
    <label>Credit Check KO</label>
</RecordType>