force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_Default.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Default</fullName>
    <active>true</active>
    <description>Record Type di default per activity dei processi</description>
    <label>Default</label>
</RecordType>