force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_DistributorAppointment.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_DistributorAppointment</fullName>
    <active>true</active>
    <description>Activity per tracciare gli appuntamenti presi fra cliente e distributore</description>
    <label>Appuntamento Distributore</label>
</RecordType>