force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_DistributorCommunication.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_DistributorCommunication</fullName>
    <active>true</active>
    <description>Activity per tracciare comunicazioni inviate e ricevute verso il distributore (correlate ad un appuntamento)</description>
    <label>Comunicazioni Distributore</label>
</RecordType>