force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_EscalationAccountLead.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_EscalationAccountLead</fullName>
    <active>true</active>
    <label>Escalation - Account/Lead</label>
</RecordType>