force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_EscalationCase.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_EscalationCase</fullName>
    <active>true</active>
    <label>Escalation - Case</label>
</RecordType>