force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_EscalationGeneric.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_EscalationGeneric</fullName>
    <active>true</active>
    <label>Escalation - Generica</label>
</RecordType>