force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_EscalationInteraction.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_EscalationInteraction</fullName>
    <active>true</active>
    <label>Escalation - Interaction</label>
</RecordType>