force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_EscalationOpportunity.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_EscalationOpportunity</fullName>
    <active>true</active>
    <label>Escalation - Opportunity</label>
</RecordType>