force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_EscalationOrder.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_EscalationOrder</fullName>
    <active>true</active>
    <label>Escalation - Order</label>
</RecordType>