force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_GestioneIvaAccise.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_GestioneIvaAccise</fullName>
    <active>true</active>
    <description>Record type per gli le activity Gestione Iva e Accise</description>
    <label>Gestione Iva e Accise</label>
</RecordType>