force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_HCPoint.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_HCPoint</fullName>
    <active>true</active>
    <description>RT per gli HC Point</description>
    <label>HC Point</label>
</RecordType>