force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_KoPrecedeteCliente.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_KoPrecedeteCliente</fullName>
    <active>true</active>
    <description>Record type per le activity di KO Credit Check sul Precedente Cliente</description>
    <label>KO Precedente Cliente</label>
</RecordType>