force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_RegisterActivity.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_RegisterActivity</fullName>
    <active>true</active>
    <description>Activity per tracciare le richieste ricevute da protocollo</description>
    <label>Protocollo</label>
</RecordType>