force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_Scarto.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Scarto</fullName>
    <active>true</active>
    <description>Utilizzato per le attività gestite dalla CB Scarti</description>
    <label>Scarti</label>
</RecordType>