force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_Sportello.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_Sportello</fullName>
    <active>true</active>
    <description>RT per le Chiamate degli Sportelli QAd</description>
    <label>Sportello</label>
</RecordType>