force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_ValidazioneDocumentale.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_ValidazioneDocumentale</fullName>
    <active>true</active>
    <description>Record Type per Validazione Documentale del Cluster Variazioni</description>
    <label>Variazioni - Validazione Documentale</label>
</RecordType>