force-app/main/default/objects/wrts_prcgvr__Activity__c/recordTypes/HDT_RT_VisitaD2D.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_VisitaD2D</fullName>
    <active>true</active>
    <label>Visita D2D</label>
</RecordType>