force-app/main/default/objects/wrts_prcgvr__Activity__c/validationRules/ChangeTypeProtocol.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeTypeProtocol</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(ISCHANGED(Type__c),NOT(ISPICKVAL(Type__c,&apos;&apos;)),RecordType.DeveloperName == &apos;HDT_RT_RegisterActivity&apos;, ISPICKVAL(wrts_prcgvr__Status__c , &apos;Aperta&apos;)),false ,true)</errorConditionFormula>
    <errorMessage>Non è possibile cambiare il Tipo Attività o inserire un valore vuoto</errorMessage>
</ValidationRule>