force-app/main/default/objects/wrts_prcgvr__Activity__c/validationRules/HDT_VR_CreditCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_VR_CreditCheck</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(AND( $Permission.HDT_CP_EnableCreditCheck = false , RecordType.DeveloperName = &apos;HDT_RT_CreditCheckKO&apos;,	NOT( ISNEW() )	),	AND ( $Permission.HDT_CP_EnableCreditCheck = false , RecordType.DeveloperName = &apos;HDT_RT_CreditCheckKO&apos;,ISNEW(),  NOT( ISPICKVAL( Status__c , &apos;Creata&apos;) ) ) ) , true, false)</errorConditionFormula>
    <errorMessage>Questo utente non dispone dei permessi per l&apos;activity CreditCheckKO</errorMessage>
</ValidationRule>