force-app/main/default/objects/wrts_prcgvr__Activity__c/validationRules/HDT_VR_GestApp_CompDL.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_VR_GestApp_CompDL</fullName>
    <active>false</active>
    <description>Impedisce la movimentazione manuale degli appuntamenti AtoA gestiti da Distributore</description>
    <errorConditionFormula>false
/*Valido solo per Gestione appuntamento*/
/*Vincolare anche per utenza*/
/*AND(RecordTypeId = &quot;0123N000002WpWEQA0&quot;,
AND(ISPICKVAL(AppointmentCompetence__c, &quot;Distributore&quot;),
isAtoA__c = TRUE))*/</errorConditionFormula>
    <errorDisplayField>AppointmentCompetence__c</errorDisplayField>
    <errorMessage>Appuntamenti in AtoA in carico al Distributore non possono essere movimentabili manualmente</errorMessage>
</ValidationRule>