force-app/main/default/objects/wrts_prcgvr__Activity__c/validationRules/HDT_VR_GestApp_ContattiSelf.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_VR_GestApp_ContattiSelf</fullName>
    <active>true</active>
    <description>Vincola l&apos;inserimento di un dato di contatto</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;HDT_RT_DistributorAppointment&quot;,
	/*isSelfAppointment__c = TRUE,*/
	isnull(Mobile__c),
	isnull(Email__c)
)</errorConditionFormula>
    <errorMessage>Deve essere sempre valorizzato o un numero di telefono o un indirizzo email</errorMessage>
</ValidationRule>