force-app/main/default/objects/wrts_prcgvr__Activity__c/validationRules/HDT_VR_GestApp_ModAppuntamento.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_VR_GestApp_ModAppuntamento</fullName>
    <active>true</active>
    <description>Vincola l&apos;operatore a rimuovere il flag di appuntamento da modificare</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;HDT_RT_DistributorAppointment&quot;, /*Valido solo per Gestione appuntamento*/
				NOT(AND(OR(ISPICKVAL(Status__c, &quot;Appuntamento confermato&quot;),
											ISPICKVAL(Status__c, &quot;Modifica confermata&quot;)),
				IsAppointmentToEdit__c =TRUE)))</errorConditionFormula>
    <errorDisplayField>IsAppointmentToEdit__c</errorDisplayField>
    <errorMessage>Rimuovere la spunta; valida solo in caso di appuntamenti confermati</errorMessage>
</ValidationRule>