force-app/main/default/objects/wrts_prcgvr__Activity__c/validationRules/HDT_VR_GestApp_ObblNonAtoA.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_VR_GestApp_ObblNonAtoA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;HDT_RT_DistributorAppointment&quot;,
    isAtoA__c = false,
    NOT(ispickval(Status__c,&quot;Presa appuntamento in corso&quot;)),
    OR(ISCHANGED(AppointmentDate__c),
    ischanged(AppoitmentTimeSlotConfirmed__c)
))</errorConditionFormula>
    <errorMessage>E&apos; possibile modificare Data e Fascia Appuntamento Confermato solo in stato &quot;Presa appuntamento in corso&quot;</errorMessage>
</ValidationRule>