force-app/main/default/objects/wrts_prcgvr__Activity__c/validationRules/HDT_VR_PastDate_DataScadenzaSospensione.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_VR_PastDate_DataScadenzaSospensione</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
		ISPICKVAL(wrts_prcgvr__Status__c, &apos;Sospesa&apos;),
		NOT(ISCHANGED(OwnerId)),
		SuspensionDueDate__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>SuspensionDueDate__c</errorDisplayField>
    <errorMessage>Impossibile inserire una Data Scadenza Sospensione nel passato</errorMessage>
</ValidationRule>