force-app/main/default/objects/wrts_prcgvr__Activity__c/validationRules/HDT_VR_Protocollo.validationRule-meta.xml
<ValidationRule>
    <fullName>HDT_VR_Protocollo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;HDT_RT_RegisterActivity&apos;, 
						 NOT($Permission.HDT_CP_ProtocolManualActivities))</errorConditionFormula>
    <errorMessage>Non hai permessi di modificare questo tipo di activity</errorMessage>
</ValidationRule>