force-app/main/default/objects/wrts_prcgvr__Activity__c/listViews/Le_Mie_Attivit.listView-meta.xml
<ListView>
    <fullName>Le_Mie_Attivit</fullName>
    <columns>NAME</columns>
    <columns>wrts_prcgvr__Status__c</columns>
    <columns>Account__c</columns>
    <columns>ReminderCount__c</columns>
    <columns>Agency__c</columns>
    <columns>WorkGroup__c</columns>
    <columns>ActivityStartTime__c</columns>
    <columns>ActivityEndTime__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Approvazione Bonus Commerciale</value>
    </filters>
    <label>Le Mie Attività</label>
</ListView>