force-app/main/default/objects/wrts_prcgvr__Activity__c/listViews/ListaAccountPartners.listView-meta.xml
<ListView>
    <fullName>ListaAccountPartners</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Partner_Matching__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Lista Account Partners</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>