force-app/main/default/objects/wrts_prcgvr__Activity__c/listViews/Tutte_le_Attivit.listView-meta.xml
<ListView>
    <fullName>Tutte_le_Attivit</fullName>
    <columns>NAME</columns>
    <columns>wrts_prcgvr__Status__c</columns>
    <columns>WorkGroup__c</columns>
    <columns>Account__c</columns>
    <columns>ReminderCount__c</columns>
    <columns>Agency__c</columns>
    <columns>ActivityStartTime__c</columns>
    <columns>ActivityEndTime__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>StartDate__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Tutte le Attività</label>
</ListView>