force-app/main/default/objects/wrts_prcgvr__Activity__c/listViews/wrts_prcgvr__All.listView-meta.xml
<ListView>
    <fullName>wrts_prcgvr__All</fullName>
    <columns>NAME</columns>
    <columns>wrts_prcgvr__Description__c</columns>
    <columns>wrts_prcgvr__Status__c</columns>
    <columns>wrts_prcgvr__StatusIcon__c</columns>
    <columns>wrts_prcgvr__DueDate__c</columns>
    <columns>wrts_prcgvr__IsRequired__c</columns>
    <columns>wrts_prcgvr__ActivityTemplate__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>